--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 .navlinks {
   display: flex;
   gap: 20px;
+  margin: 0;
 }
 
 li {
@@ -26,4 +27,6 @@ li {
 .link-style {
   margin: 0;
   padding: 0;
+  text-decoration: none;
+  font-size: 24px;
 }
