--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+li {
+  list-style-type: none;
+}
+
+/* NAVBAR */
 .navbar {
   background-color: aliceblue;
   border-bottom: 1px solid rgb(49, 49, 49);
@@ -20,10 +25,6 @@ body {
   display: flex;
   gap: 20px;
   margin: 0;
-}
-
-li {
-  list-style-type: none;
 }
 
 .link-style {
