--- a/style.css
+++ b/style.css
@@ -3,9 +3,10 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-li {
-  list-style-type: none;
-}
+li {list-style-type: none;}
+
+ul {margin: 0;}
+
 
 /* NAVBAR */
 .navbar {
@@ -24,7 +25,6 @@ li {
 .navlinks {
   display: flex;
   gap: 20px;
-  margin: 0;
 }
 
 .link-style {
@@ -37,4 +37,20 @@ li {
 
 h1 .link-style {
   font-size: 24px;
+}
+
+
+/* STICKY NOTES */
+main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sticky-note {
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 300px;
+  margin: 20px;
+  border: 1px solid rgb(49, 49, 49);
 }
