Make navbar darker blue and style sticky note

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ ul {
 
 /* NAVBAR */
 .navbar {
-  background-color: aliceblue;
+  background-color: rgb(201, 228, 248);
   border-bottom: 1px solid rgb(49, 49, 49);
 }
 
@@ -62,4 +62,14 @@ main {
 .note-buttons {
   display: flex;
   justify-content: space-between;
+  background-color: aliceblue;
+}
+
+.button {
+  margin: 10px;
+}
+
+.note-content {
+  margin: 0;
+  padding: 6px;
 }
