--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ main {
   height: 300px;
   width: 300px;
   margin: 20px;
-  border: 1px solid rgb(49, 49, 49);
+  border: 2px solid rgb(49, 49, 49);
 }
 
 .note-buttons {
@@ -67,6 +67,10 @@ main {
 
 .button {
   margin: 10px;
+  background-color: white;
+  border: 1px solid rgb(49, 49, 49);
+  font-size: 16px;
+  border-radius: 4px;
 }
 
 .note-content {
