--- a/style.css
+++ b/style.css
@@ -68,12 +68,18 @@ main {
 .button {
   margin: 10px;
   background-color: white;
+  color: rgb(49, 49, 49);
   border: 1px solid rgb(49, 49, 49);
   font-size: 16px;
   border-radius: 4px;
 }
 
+.button:hover {
+  background-color: whitesmoke;
+}
+
 .note-content {
   margin: 0;
   padding: 6px;
+  color: rgb(49, 49, 49);
 }
