replace input tag in the sticky note with textarea and style the size of it

--- a/style.css
+++ b/style.css
@@ -78,8 +78,15 @@ main {
   background-color: whitesmoke;
 }
 
+.button:active {
+  font-size: 15px;
+}
+
 .note-content {
   margin: 0;
   padding: 6px;
   color: rgb(49, 49, 49);
+  border: none;
+  height: 258px;
+  resize: none;
 }
