--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ ul {
 .navbar {
   background-color: rgb(201, 228, 248);
   border-bottom: 1px solid rgb(49, 49, 49);
+  margin-bottom: 20px;
 }
 
 .nav-container {
@@ -87,6 +88,6 @@ main {
   padding: 6px;
   color: rgb(49, 49, 49);
   border: none;
-  height: 258px;
+  height: 100%;
   resize: none;
 }
